using System;
using System.Collections.Generic;
using System.ComponentModel.DataAnnotations;
using System.ComponentModel.DataAnnotations.Schema;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace MembershipPortal.data
{
    public class NetContent
    {
        [Key]
        [DatabaseGenerated(DatabaseGeneratedOption.Identity)]
        public int id { get; set; }
        [Required]
        [StringLength(50)]
        public string code { get; set; }
        [Required]
        [StringLength(100)]
        public string name { get; set; }
        [StringLength(200)]
        public string description { get; set; }
        public List<Product> Products { get; set; }
    }
}
